# HVRT

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_wheels.yml
archive/: ARCHIVE_INDEX.md
archive/docs/: SVM_PERFORMANCE_ANALYSIS.md  SVM_PILOT_SNR_ANALYSIS.md
archive/experimental/experiments/: exp_svm_feasibility_study.py  exp_svm_pilot_with_snr.py
archive/experimental/results/svm_pilot/: pilot_results.json  pilot_results_with_snr.json
benchmarks/: adaptive_full_benchmark.py  adaptive_kde_benchmark.py  bandwidth_benchmark.py  bootstrap_failure_benchmark.py  dcr_privacy_benchmark.py  epanechnikov_partitions_benchmark.py  findings.md  findings_dcr.md  findings_hart.md  findings_pyramid_hart_strategies.md  findings_speed.md  heart_disease_benchmark.py  hpo_benchmark.py  profile_fit.py  pyramid_hart_benchmark.py  reduction_denoising_benchmark.py  report_results.py  run_benchmarks.py  speed_benchmark.py  strategy_speedup_benchmark.py  tree_splitter_benchmark.py  two_phase_pipeline_benchmark.py
benchmarks/auto_tuner/: findings.md  min_samples_study.py
benchmarks/results/: benchmark_results.json  dcr_privacy.json  hart_benchmark_results.json  numba_speed_benchmark.md  tree_splitter_benchmark.json  tree_splitter_benchmark.md
cpp/: CMakeLists.txt
cpp/include/hvrt/: binner.h  expand.h  hvrt.h  reduce.h  target.h  threadpool.h  tree.h  types.h  whitener.h
cpp/python/: __init__.py  bindings.cpp
cpp/src/: binner.cpp  expand.cpp  hvrt.cpp  reduce.cpp  target.cpp  tree.cpp  whitener.cpp
examples/: README.md  adaptive_reduction.py  adaptive_scoring_options.py  basic_usage.py  heavy_tailed_data.py  multi_strategy_demo.py  regulatory_compliance.py  svm_speedup_demo.py
notebooks/: generate_notebook.py  hvrt_llm_probe.ipynb  pyramid_hart_geometry.py
research/: README.md
research/ffn_probe/: HVRT_LM_Technical_Report.md  README.md  hvrt_corrector.py  hvrt_corrector_boosted.py  hvrt_corrector_vocab.py  hvrt_ffn_replace.py
research/generation/: __init__.py  compare.py  methods.py
research/llm_probe/: hvrt_boosted_probe.py  hvrt_llm_probe.py  hvrt_sweep_probe.py
src/hvrt/: __init__.py  _base.py  _budgets.py  _cpp_backend.py  _geometry.py  _hart_base.py  _kernels.py  _params.py  _partitioning.py  _preprocessing.py  _warnings.py  adaptive_reducer.py  core.py  expand.py  generation_strategies.py  optimizer.py  reduce.py  reduction_strategies.py  sample_reduction.py  sample_similarity.py  selection_strategies.py  utils.py
src/hvrt/benchmarks/: __init__.py  datasets.py  metrics.py  runners.py  visualization.py
src/hvrt/legacy/: adaptive_reducer.py  selection_strategies.py
src/hvrt/model/: __init__.py  fast_hart.py  fast_hvrt.py  hart.py  hvrt.py  pyramid_hart.py
src/hvrt/pipeline/: __init__.py
tests/: test_benchmarks.py  test_categorical_accuracy_retention.py  test_categorical_support.py  test_core.py  test_deterministic_scalability.py  test_expand.py  test_kernels.py  test_optimizer.py  test_pyramid_hart.py  test_reduce.py  test_selection_strategies.py
