[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "hvrt"
version = "2.8.0"
description = "Hierarchical Variance-Retaining Transformer (HVRT) — variance-aware sample transformation for tabular data"
readme = "README.md"
requires-python = ">=3.8"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Jake Peace", email = "mail@jakepeace.me"}
]
keywords = [
    "machine-learning", "sample-reduction", "synthetic-data",
    "data-augmentation", "data-preprocessing", "variance", "kde",
    "tabular-data", "heavy-tailed",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
fast = [
    "numba>=0.56",
]
benchmarks = [
    "xgboost>=1.5",
    "matplotlib>=3.5",
    "pandas>=1.3",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "twine>=5.0.0",
    "build>=1.0.0",
]
optimizer = [
    "optuna>=3.0.0",
]
cpp = []    # no extra pip deps — C++ built automatically by scikit-build-core

[project.urls]
Homepage = "https://github.com/hotprotato/hvrt"
Documentation = "https://github.com/hotprotato/hvrt#readme"
Repository = "https://github.com/hotprotato/hvrt"
Issues = "https://github.com/hotprotato/hvrt/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["hvrt.benchmarks*"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/hvrt"]
cmake.source-dir = "."

[tool.scikit-build.cmake.define]
HVRT_BUILD_TESTS = "OFF"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | archive
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.cibuildwheel]
# Build CPython 3.9–3.13; skip 32-bit and musl-libc (Alpine) targets
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip  = "*-win32 *-manylinux_i686 *-musllinux_*"

# macOS archs are intentionally not set here — each runner (macos-13 / macos-14)
# builds for its own native architecture, avoiding cross-compilation entirely.
